--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "lazy-load-list": "^1.2.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
